--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="co.ceryle.segmentedbutton.sample"
+<manifest package="com.addisonelliott.segmentedbutton.sample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
