Add TODO option for future

--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,9 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // TODO Look into this and see why this plugin is used? Better option?
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
