--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,7 +22,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.3.1'
+
+    implementation "androidx.appcompat:appcompat:$androidXLibraryVersion"
 
     api project(":library")
 }
