--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 
         // TODO Look into this and see why this plugin is used? Better option?
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+
     }
 }
 
@@ -18,6 +19,9 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
