--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,5 +32,8 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:$androidXLibraryVersion"
 
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
     api project(":library")
 }
