--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,31 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
+        maven {
+            url "https://jitpack.io"
+        }
     }
+}
+
+ext {
+    minSdkVersion = 16
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+    androidXLibraryVersion = '1.0.2'
 }
 
 task clean(type: Delete) {
